--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...          
-      - docker build -t cxr-yolov5 .
+      - docker build -t cxr-test-yolo .
       - docker tag cxr-test-yolo:latest 323145895334.dkr.ecr.ap-southeast-1.amazonaws.com/cxr-test-yolo:cxr-test-yolo
   post_build:
     commands:
